# sidekick-copilot

./: .gitignore  LICENSE  README.md
sidekick/: .agent.md  .env.example  CHANGELOG.md  INSTALL.md  README.md  install.ps1  pyproject.toml
sidekick-notify/: .vscodeignore  (+2 more)
sidekick/configs/: _template.yaml  default.yaml
sidekick/src/sidekick/: __init__.py  cli.py  config.py  dedup.py  engine.py  grounding.py  llm.py  prompt_budget.py  server.py  session_state.py
sidekick/src/sidekick/actions/: __init__.py  prototype.py  research.py
sidekick/src/sidekick/agents/: sidekick.agent.md
sidekick/src/sidekick/analyst/: __init__.py  adjudicator.py  classifier.py  context.py  prompts.py  speakers.py
sidekick/src/sidekick/extensions/: sidekick-notify.vsix
sidekick/src/sidekick/output/: __init__.py  deliverables.py  notifier.py  session_log.py
sidekick/src/sidekick/queue/: __init__.py  priority_queue.py
sidekick/tests/: test_adjudicator.py  test_analyst_prompt.py  test_audio_capture.py  test_benchmark_stt.py  test_classifier_parse.py  test_cli_install.py  test_cli_stt.py  test_config_merge.py  test_dedup.py  test_deliverables.py  test_engine.py  test_grounding.py  test_listen_loop.py  test_llm_routing.py  test_models_config.py  test_notifications_config.py  test_notifier.py  test_objectives.py  test_parse_llm_json.py  test_priority_queue.py  test_prompt_budget.py  test_research_routing.py  test_session_log.py  test_session_state.py  test_speakers.py  test_speech_recogniser.py  test_stop_response.py  test_streaming.py  test_thread_dedup.py  test_vocabulary.py
(+8 files in other folders)
